ch1 summary update

--- a/main.tex
+++ b/main.tex
@@ -250,10 +250,8 @@ So, $f_k(\emptyset) = f_k(\emptyset\cup\emptyset) = f_k(\emptyset) + f_k(\emptys
 \section{Summary}
 
 
-In this first section, we've laid the groundwork for a physical treatment of differential geometry. By starting with the idea of distinguishing states of a system, we are quickly able to come to an intuitive understanding of manifolds. 
+In this first section, we've laid the groundwork for a physical treatment of differential geometry. By starting with the idea of distinguishing states of a system, we are quickly able to come to an intuitive understanding of manifolds. We see also that a purely physically motivated form of differential geometry is possible, which will be further confirmed in the coming chapters. 
 
-
-NOTE: Distinguish somewhere between exterior product/space and exterior/boundary/interior points
 
 \chapter{Mathematical representation of infinitesimal objects}
 
